# FileBitStream

./: CMakeLists.txt  FileBitStream.sln  FileBitStream.vcxproj  FileBitStream.vcxproj.filters  fbstream.cpp  fbstream.h  fbstream.hpp
ifbstream/: ifbstream.hpp
ifbstream/constructors/: constructors.cpp  destructors.cpp
ifbstream/functions/: input.cpp  position.cpp  stream.cpp
ofbstream/: ofbstream.hpp
ofbstream/constructors/: constructors.cpp  destructors.cpp
ofbstream/functions/: output.cpp  position.cpp  stream.cpp
